--- a/issue/templates/issues.html
+++ b/issue/templates/issues.html
@@ -1,35 +1,61 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-<h1 class="page-title">All Issues</h1>
-
+{% extends 'base.html' %} {% block content %}
+<div class="row">
+  <div class="col-md-6">
+    <h1 class="page-title">Bugs</h1> 
     {% for issue in issues %}
-<div class="accordion issue-card" id="accordionExample">
-    <div class="card" style="width: 35rem;">    
-    <div class="card-header" id="headingOne{{ forloop.counter }}">
-        <h5 class="mb-0">
-                <button class="btn btn-link" id="issue-title" type="button" data-toggle="collapse" data-target="#collapseOne{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseOne{{ forloop.counter }}">
+    {% if issue.varieties == issue.BUG %}
+    <div class="accordion issue-card" id="accordionExample">
+      <div class="card" style="width: 35rem;">
+        <div class="card-header" id="headingOne{{ forloop.counter }}">
+          <h5 class="mb-0">
+            <button class="btn btn-link" id="issue-title" type="button" data-toggle="collapse" data-target="#collapseOne{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseOne{{ forloop.counter }}">
                 {{ issue.name}}
-                 
-                </button>
-                <span class="badge badge-primary badge-pill" id="upvote-badge">{{ issue.upvotes }}</span>
-            </h5>
+            </button>
+            <span class="badge badge-primary badge-pill" id="upvote-badge">{{ issue.upvotes }}</span>
+          </h5>
         </div>
-    <div id="collapseOne{{ forloop.counter }}" class="collapse " aria-labelledby="headingOne{{ forloop.counter }}" data-parent="#accordionExample">
-        <div class="card-body">
+        <div id="collapseOne{{ forloop.counter }}" class="collapse" aria-labelledby="headingOne{{ forloop.counter }}" data-parent="#accordionExample">
+          <div class="card-body">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Description: {{ issue.description }}</li>
-                <li class="list-group-item">Created at: {{ issue.created_at }}</li>
-                <li class="list-group-item">Created by: {{ issue.created_by }}</li>
+              <li class="list-group-item">Description: {{ issue.description }}
+              </li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-outline-secondary" style="margin: 0 22px 17px;">Details</a>
         </div>
-      <a href="{% url 'get_detail' issue.id %}" class="btn w-25" id="btn-read-more">Read more</a>
+      </div>
     </div>
-    </div>
-</div>
+    {% endif %} 
     {% endfor %}
-       
+  </div><!-- End column-->
+  <div class="col-md-6">
+    <h1 class="page-title">Features</h1> 
+     {% for issue in issues %}
+     {% if issue.varieties == issue.FEATURE %} 
+    <div class="accordion issue-card" id="accordionExample2">
+      <div class="card" style="width: 35rem;">
+        <div class="card-header" id="headingTwo{{ forloop.counter }}">
+          <h5 class="mb-0">
+            <button class="btn btn-link" id="issue-title" type="button" data-toggle="collapse" data-target="#collapseTwo{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseTwo{{ forloop.counter }}">
+                {{ issue.name}}
+            </button>
+            <span class="badge badge-primary badge-pill" id="upvote-badge">{{ issue.upvotes }}</span>
+          </h5>
+        </div>
+        <div id="collapseTwo{{ forloop.counter }}" class="collapse " aria-labelledby="headingTwo{{ forloop.counter }}" data-parent="#accordionExample">
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Description: {{ issue.description }}
+              </li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-outline-secondary" style="margin: 0 22px 17px;">Details</a>
+        </div>
+      </div>
+    </div>
+    {% endif %} 
+    {% endfor %}
+  </div><!--End column-->
+</div>
 
 {% endblock %}
-
-
