--- a/issue/templates/issues.html
+++ b/issue/templates/issues.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col-md-6">
     <h1 class="page-title">Bugs</h1> 
-    {% for issue in issues %}
-    {% if issue.varieties == issue.BUG %}
+{% for issue in issues %}
+{% if issue.varieties == issue.BUG %}
     <div class="accordion issue-card" id="accordionExample">
       <div class="card" style="width: 35rem;">
         <div class="card-header" id="headingOne{{ forloop.counter }}">
@@ -21,17 +21,17 @@
               </li>
             </ul>
           </div>
-          <a href="#" class="btn btn-outline-secondary" style="margin: 0 22px 17px;">Details</a>
+          <a href="{% url 'get_detail' issue.id %}" class="btn btn-outline-secondary" style="margin: 0 22px 17px;">Details</a>
         </div>
       </div>
     </div>
-    {% endif %} 
-    {% endfor %}
+{% endif %} 
+{% endfor %}
   </div><!-- End column-->
   <div class="col-md-6">
     <h1 class="page-title">Features</h1> 
-     {% for issue in issues %}
-     {% if issue.varieties == issue.FEATURE %} 
+{% for issue in issues %}
+{% if issue.varieties == issue.FEATURE %} 
     <div class="accordion issue-card" id="accordionExample2">
       <div class="card" style="width: 35rem;">
         <div class="card-header" id="headingTwo{{ forloop.counter }}">
@@ -49,12 +49,12 @@
               </li>
             </ul>
           </div>
-          <a href="#" class="btn btn-outline-secondary" style="margin: 0 22px 17px;">Details</a>
+          <a href="{% url 'get_detail' issue.id %}" class="btn btn-outline-secondary" style="margin: 0 22px 17px;">Details</a>
         </div>
       </div>
     </div>
-    {% endif %} 
-    {% endfor %}
+{% endif %} 
+{% endfor %}
   </div><!--End column-->
 </div>
 
