--- a/issue/templates/issues.html
+++ b/issue/templates/issues.html
@@ -26,6 +26,8 @@
       </div>
     </div>
 {% endif %} 
+{% empty %}
+    <p>No bugs.</p>
 {% endfor %}
   </div><!-- End column-->
   <div class="col-md-6">
@@ -54,6 +56,8 @@
       </div>
     </div>
 {% endif %} 
+{% empty %}
+    <p>No Features.</p>
 {% endfor %}
   </div><!--End column-->
 </div>
