--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Issue Tracker</title>
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   {% block head_js %} {% endblock head_js%}
 </head>
 
@@ -29,18 +29,17 @@
       {% if user.is_authenticated %}
       <form action="{% url 'search' %}" method="GET" class="form-inline">
         <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="nav-form-btn">Search</button>
       </form>
-      <li class="nav-list"><a class="nav-link" href="{% url 'my_issues' %}">My Issues</a></li>
-      <li class="nav-list"><a class="nav-link" href="#">Charts</a></li>
+      <li class="nav-list"><a class="nav-link" href="{% url 'my_issues' %}"><i class="fas fa-list-ul icon-nav"></i>My Issues</a></li>
       <li class="nav-list">
-        <a class="nav-link" href="{% url 'view_cart' %}">Cart
+        <a class="nav-link" href="{% url 'view_cart' %}"><i class="fas fa-shopping-cart icon-nav"></i>Cart
           {% if issue_count > 0 %}
           <label class="badge badge-warning">{{ issue_count }}</label>
           {% endif %}
         </a>
       </li>
-      <li class="nav-list"><a class="nav-link" href="{% url 'logout' %}">Log Out</a></li>
+      <li class="nav-list"><a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt icon-nav"></i>Log Out</a></li>
       {% else %}
       <li class="nav-list"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
       <li class="nav-list"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
