--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% load bootstrap_tags %}
+{% load bootstrap4 %}
 {% block content %}
     <form method="post" action="{% url 'register' %}" class="accountform">
         <fieldset class="form-group">
             <legend>Create a new account</legend>
             <p>Already got an account? <a href="{% url 'login' %}">Sign In</a></p>
             {% csrf_token %}
-            {{  user_form | as_bootstrap }}
+            {% bootstrap_form user_form %}
             <button type="submit" class="btn btn-primary">Create account</button>
         </fieldset>
     </form>
