--- a/issue/templates/issueform.html
+++ b/issue/templates/issueform.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
-{% load bootstrap_tags %}
+{% load bootstrap4 %}
 {% block content %}
 
 <h2 class="page-title">New Issue</h2>
 
 <form method='POST' action="">
     {% csrf_token %}
-    {{ form | as_bootstrap }}
-    <button type="submit" value="submit" class="btn btn-info">Save</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+        <button type="submit" class="btn btn-primary">Save</button>
+    {% endbuttons %}
     
 </form>
 
