--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} {% load bootstrap4 %} {% block content %}
 
+<div class="row">
+  <div class="col-lg-12">
 <section id="cart-page">
   <header class="cart-header">
     <div class="row">
@@ -9,19 +11,17 @@
       <h2 class="cart-title">Your shopping cart</h2>
     </div>
   </header>
+  <div class="row">
   <div class="card" id="cart-card">
-    {% for item in cart_items %}
-    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-      {% csrf_token %}
-      <table class="table table-hover shopping-cart-wrap">
+    <table class="table table-hover shopping-cart-wrap">
         <thead class="text-muted">
           <tr>
             <th scope="col">Product</th>
-            <th scope="col" width="120">Price</th>
-            <th scope="col" width="120">New Qty</th>
-            <th scope="col" width="200" class="text-right last">Action</th>
+            <th scope="col">Price</th>
           </tr>
         </thead>
+    {% for item in cart_items %}
+      {% csrf_token %}
         <tbody>
           <tr>
             <td>
@@ -42,37 +42,25 @@
             <td>
               <div class="price-wrap">
                 <var class="price">{{ item.issue.price }}</var>
-                <small class="text-muted">(EUR 5.00 each)</small>
               </div>
-              <!-- price-wrap .// -->
-            </td>
-            <td>
-              <div class="form-group">
-                <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                <div class="input-group">
-                  <input name="quantity" type="number" min="0" max="99" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-add" id="btn-mobile">Add</button>
-              </div>
-            </td>
-            <td class="text-right last">
-              <button type="submit" class="btn btn-add">Add</button>
-              <a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
             </td>
           </tr>
           {% endfor %}
+          <tr>
+          <td>
+              <div class="row text-muted" id="total-checkout">
+                <p class="total">Total:</p>
+                <p class="total-price"><i class="fas fa-euro-sign"></i>{{ total }}</p>
+              </div>
+              <a href="{% url 'checkout' %}" class="btn btn-success" id="btn-checkout" role="button">Checkout</a>
+          </td>
+        </tr>
         </tbody>
       </table>
-    </form>
-    
   </div>
-  <!-- card.// -->
-  <div class="row text-muted" id="total-checkout">
-    <p class="total">Total:</p>
-    <p class="total-price"><i class="fas fa-euro-sign"></i>{{ total }}</p>
   </div>
-  <a href="#" role="button btn-success" id="btn-mob-checkout">Checkout</a>
 </section>
-
+</div>
+</div>
 
 {% endblock %}
