--- a/issue/templates/detail.html
+++ b/issue/templates/detail.html
@@ -1,10 +1,6 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-
+{% extends 'base.html' %} {% block content %}
 <div class="row">
-  <div class="col-md-6">
+  <div class="wrapper">
     <div class="list-group w-75" id="detail-panel">
       <button type="button" class="list-group-item list-group-item-action active" id="issue-details-bg-custom">
           Issue Details
@@ -13,55 +9,58 @@
       <button type="button" class="list-group-item list-group-item-action">Label: {{ issue.varieties }}</button>
       <button type="button" class="list-group-item list-group-item-action">Description: {{ issue.description }}</button>
       <button type="button" class="list-group-item list-group-item-action">Created by: {{ issue.created_by }}</button>
-      <button type="button" class="list-group-item list-group-item-action">Creation date: {{ issue.created_at }}</button>
-      <button type="button" class="list-group-item list-group-item-action">Status: {{ issue.status }}</button>
-    </div>
-    <div class="action">
-    <div class="row">
-      <div class="col-md-4">
+      <button type="button" class="list-group-item list-group-item-action">Created at: {{ issue.created_at }}</button>
+      <button type="button" class="list-group-item list-group-item-action">
+        Upvotes: {{ issue.upvotes }} 
+        <a href="{% url 'upvote' issue.id %}">
+          <i class="fas fa-thumbs-up" style="font-size: 1.2rem; color: #161A3F;"></i>
+        </a>
+      </button> 
+      {% if issue.status == issue.TODO %}
+        <button type="button" class="list-group-item list-group-item-action">
+          Status: 
+          <span class="badge badge-pill badge-primary">{{ issue.status }}</span>
+        </button> 
+      {% endif %} 
+      {% if issue.status == issue.DOING %}
+        <button type="button" class="list-group-item list-group-item-action">
+          Status: 
+          <span class="badge badge-pill badge-info">{{ issue.status }}</span>
+        </button> 
+      {% endif %} 
+      {% if issue.status == issue.DONE %}
+        <button type="button" class="list-group-item list-group-item-action">
+          Status:
+          <span class="badge badge-pill badge-success">{{ issue.status }}</span>
+        </button>
+      {% endif %}
+      {% if issue.varieties == issue.FEATURE %}
+        {% if issue.status == issue.TODO and issue.DOING %}
         <form method="POST" action="{% url 'add_to_cart' issue.id %}">
-        {% csrf_token %}
-         {% if issue.varieties == issue.FEATURE %}
+          {% csrf_token %} 
           <div class="input-group" id="upvote">
-            <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Nº">
-            <span class="input-group-btn">
-              <button class="btn btn-succcess" type="submit" id="upvote-btn">Upvote</button>
-            </span>
-          </div> 
-          {% endif %}
-        </form>
-      </div>
-      <div class="col-md-8">
-        <a href="{% url 'create_comment' issue.id %}" class="btn" id="comment-btn">Comment</a>
-        <a class="btn" href="{% url 'upvote' issue.id %}">Upvote</a>
-      </div>
-    </div>
-    </div>
-  </div> 
-  
-
-  <div class="col-md-6" id="panel-wrapper">
-    <h4 class="comment-title">Comments</h4>
-    {% for comment in issue.comments.all %}
-      <div class="comments-panel">
-        <div class="comment-detail">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="comment-details">
-              <p>User: {{ comment.created_by }}</p>
-              <p>Created at: {{ comment.created_at }}</p>
-              <p>Comment: {{ comment.comment }}</p>
-              <form method="GET" action="{% url 'edit_comment' comment.id %}"><input type="submit" value="Edit" class="btn-edit"></form>
-            </div>
+              <button class="btn btn-outline-success" type="submit">Add to cart</button>
           </div>
-        </div>
-    {% endfor %}
-      </div>
-   </div>
- </div>   
-
-<!-- Add to cart and comment -->
-
-
-
-
+          {% endif %}
+      {% endif %}
+        </form>
+    </div>
+  </div>
+</div>
+<div id="panel-wrapper">
+  <div class="col-lg-12">
+    <h4 class="comment-title">Comments</h4>
+    <a href="{% url 'create_comment' issue.id %}" class="btn btn-outline-dark" id="btn-add-comment">Add</a>
+  </div>
+{% for comment in issue.comments.all %}
+  <div class="card">
+    <div class="card-body">
+      <p>User: {{ comment.created_by }}</p>
+      <p>Created at: {{ comment.created_at }}</p>
+      <p>Comment: {{ comment.comment }}</p>
+      <form method="GET" action="{% url 'edit_comment' comment.id %}"><input type="submit" value="Edit" class="btn btn-secondary"></form>
+    </div>
+  </div>
+</div>
+{% endfor %}
 {% endblock %}
