--- a/issue/templates/myissues.html
+++ b/issue/templates/myissues.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} {% block content %}
+<i class="fas fa-user" id="user-i"></i><h6 class="user-logged">You are logged in as {{ user.username }} </h6>
 <div class="row">
+  
   <div class="col-lg-12">
     <h1 class="page-title">My Issues</h1>
     <a href="{% url 'new_issue' %}" class="btn btn-primary" id="btn-add-issue">Add</a>
@@ -23,15 +25,48 @@
             <button type="button" class="list-group-item list-group-item-action">Status: {{ issue.status }}</button>
             <button type="button" class="list-group-item list-group-item-action">Description: {{ issue.description }}</button>
             <button type="button" class="list-group-item list-group-item-action">Created at: {{ issue.created_at }}</button>
-            
+            <button type="button" class="list-group-item list-group-item-action">
+              Upvotes: {{ issue.upvotes }} 
+              <a href="{% url 'upvote' issue.id %}">
+                <i class="fas fa-thumbs-up" id="upvote"></i>
+              </a>
+            </button> 
+            {% if issue.status == issue.TODO %}
+              <button type="button" class="list-group-item list-group-item-action">
+                Status: 
+                <span class="badge badge-pill badge-primary">{{ issue.status }}</span>
+              </button> 
+            {% endif %} 
+            {% if issue.status == issue.DOING %}
+              <button type="button" class="list-group-item list-group-item-action">
+                Status: 
+                <span class="badge badge-pill badge-info">{{ issue.status }}</span>
+              </button> 
+            {% endif %} 
+            {% if issue.status == issue.DONE %}
+              <button type="button" class="list-group-item list-group-item-action">
+                Status:
+                <span class="badge badge-pill badge-success">{{ issue.status }}</span>
+              </button>
+            {% endif %}
           </ul>
         </div>
-        <div class="row">
+        <div class="row" id="btn-action-row">
           <div class="btn-group mr-2" role="group" aria-label="Second group">
             <form method="GET" action="edit/{{ issue.id }}"><input type="submit" value="Edit" class="btn btn-outline-primary"></form>
           </div>
           <div class="btn-group" role="group" aria-label="Third group">
             <a href="{% url 'delete_issue' issue.id %}" class="btn btn-outline-danger">Delete</a>
+          </div>
+          <div class="btn-group" role="group" aria-label="Third group">
+          {% if issue.varieties == issue.FEATURE %}
+            {% if issue.status == issue.TODO and issue.DOING %}
+            <form method="POST" action="{% url 'add_to_cart' issue.id %}">
+            {% csrf_token %} 
+              <button class="btn btn-outline-success" type="submit" style="margin-left: 8px;">Add to cart</button>
+            {% endif %}
+          {% endif %}
+        </form>
           </div>
         </div>
       </div>
