--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,56 +9,56 @@
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-  {% block head_js %} {% endblock head_js%}
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"> {% block head_js %} {% endblock head_js%}
 </head>
-
 <body>
-<nav class="navbar navbar-expand-md navbar navbar-dark bg-custom">
-  {% if user.is_authenticated %}
-    <a class="navbar-brand cb-brand" href="{% url 'issues' %}">Issue Tracker</a>
+  <nav class="navbar navbar-expand-md navbar navbar-dark bg-custom">
+    {% if user.is_authenticated %}
+    <a class="navbar-brand cb-brand" href="{% url 'issues' %}"><i class="fas fa-cog" style="margin-right: 5px;"></i>Issue Tracker</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-  {% else %}
-    <a class="navbar-brand cb-brand" href="#">Issue Tracker</a> 
-  {% endif %}
-    <ul class="navbar-nav ml-auto">
-      {% if user.is_authenticated %}
-      <form action="{% url 'search' %}" method="GET" class="form-inline">
-        <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="nav-form-btn">Search</button>
-      </form>
-      <li class="nav-list"><a class="nav-link" href="{% url 'my_issues' %}"><i class="fas fa-list-ul icon-nav"></i>My Issues</a></li>
-      <li class="nav-list">
-        <a class="nav-link" href="{% url 'view_cart' %}"><i class="fas fa-shopping-cart icon-nav"></i>Cart
+      {% else %}
+      <a class="navbar-brand cb-brand" href="{% url 'index' %}"><i class="fas fa-cog" style="font-size: 2rem;"></i></a> {% endif %}
+      <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated %}
+        <form action="{% url 'search' %}" method="GET" class="form-inline">
+          <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="nav-form-btn">Search</button>
+        </form>
+        <li class="nav-list"><a class="nav-link" href="{% url 'my_issues' %}"><i class="fas fa-list-ul icon-nav"></i>My Issues</a></li>
+        <li class="nav-list">
+          <a class="nav-link" href="{% url 'view_cart' %}"><i class="fas fa-shopping-cart icon-nav"></i>Cart
           {% if issue_count > 0 %}
           <label class="badge badge-warning">{{ issue_count }}</label>
           {% endif %}
         </a>
-      </li>
-      <li class="nav-list"><a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt icon-nav"></i>Log Out</a></li>
-      {% else %}
-      <li class="nav-list"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
-      <li class="nav-list"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
-      {% endif %}
-    </ul>
+        </li>
+        <li class="nav-list"><a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt icon-nav"></i>Log Out</a></li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+  {% if messages %}
+  <div class="alert alert-success" id="message-alert">
+    <div class="messages">
+      {% for message in messages %} {{ message }} {% endfor %}
+    </div>
   </div>
-</nav>
- 
-<div class="container">
-    {% if messages %}
-      <div class="alert alert-success" id="message-alert">
-        <div class="messages">
-    {% for message in messages %} {{ message }} {% endfor %}
+  {% endif %} {% block content %} {% endblock %}
+  <footer class="footer p-3">
+      <div class="row">
+        <div class="m-auto ">
+          <p>Created by Luisa Negri</p>
         </div>
       </div>
-    {% endif %}
-{% block content %} {% endblock %}
-</div>
-
-
+      <div class="row">
+        <div class="m-auto">
+          <a href="https://github.com/luisanegri"><i class="fab fa-github" id="github-icon"></i></a>
+        </div>
+      </div>
+  </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
