--- a/issue/templates/issueform.html
+++ b/issue/templates/issueform.html
@@ -1,18 +1,14 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-
-<h2 class="page-title">New Issue</h2>
-
-<form method='POST' action="">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">Save</button>
-    {% endbuttons %}
-    
-</form>
-
-
-
+<div class="container">
+    <h2 class="page-title">New Issue</h2>
+    <form method='POST' action="">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Save</button>
+        {% endbuttons %}
+    </form>
+</div>
 {% endblock %}
