added class to title

--- a/issue/templates/commentform.html
+++ b/issue/templates/commentform.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h2>Comment</h2>
+    <h2 class="page-title form-title">Comment</h2>
     <form method='POST' action="">
         {% csrf_token %}
         {% bootstrap_form form %}
