--- a/issue/templates/issueform.html
+++ b/issue/templates/issueform.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% block content %}
 <div class="container">
-    <h2 class="page-title">New Issue</h2>
+    <h2 class="page-title form-title">New Issue</h2>
     <form method='POST' action="">
         {% csrf_token %}
         {% bootstrap_form form %}
