--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -4,7 +4,7 @@
 <div class="container">
     <form method="post" action="{% url 'register' %}" class="accountform">
         <fieldset class="form-group">
-            <legend>Create a new account</legend>
+            <legend class="form-title">Create a new account</legend>
             <p>Already got an account? <a href="{% url 'login' %}">Sign In</a></p>
             {% csrf_token %}
             {% bootstrap_form user_form %}
